helm/envoy/envoy.yaml
node:
  cluster: ecdsdemo
  id: ecdsdemo

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

static_resources:
  listeners:
  - name: apim
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: test_route
            virtual_hosts:
            - name: www
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: target
                  auto_host_rewrite: true

          http_filters:
          - name: envoy.filters.http.ext_proc
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor"
              failure_mode_allow: false
              async_mode: false
              processing_mode:
                request_header_mode: "SEND"
                response_header_mode: "SEND"
                request_body_mode: "NONE"
                response_body_mode: "NONE"
                request_trailer_mode: "SKIP"
                response_trailer_mode: "SKIP"
              grpc_service:
                envoy_grpc:
                  cluster_name: ext-proc
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - connect_timeout: 10s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: target
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: webhook.site
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: webhook.site
    http2_protocol_options: {}
    name: target
  - name: ext-proc
    connect_timeout: 5s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: { }
    load_assignment:
      cluster_name: ext-proc
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: als
                    port_value: 10001
